--- a/index.html
+++ b/index.html
@@ -11,8 +11,31 @@
     <script src="js/scripts.js"></script>
     <title>Pig Dice</title>
   </head>
-  
-  <body>
 
+  <body>
+    <div class="container">
+      <div class="row">
+        <div id="player-1" class="col-md-6">
+          <h1>Player 1</h1>
+          <div class="dice-number">
+          </div>
+          <button id="roll" type="button" name="btn">Roll the dice!</button>
+          <button id="keep-rolling" type="button" name="btn">Keep Rolling</button>
+          <button id="hold" type="button" name="btn">Hold</button>
+          <div class="turn-total">
+            <h3>Current turn total:</h3>
+          </div>
+          <div class="over-all-total">
+            <h3>Overall total: </h3>
+          </div>
+        </div>
+
+        <!-- <div id="player-2" class="col-md-6">
+
+        </div> -->
+      </div>
+
+
+    </div>
   </body>
 </html>
