--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div id="player-1" class="col-md-6">
           <h1>Player 1</h1>
-          <div class="dice-number">
+          <div id="dice-number">
           </div>
           <button id="roll" type="button" name="btn">Roll the dice!</button>
           <button id="keep-rolling" type="button" name="btn">Keep Rolling</button>
