--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div id="dice-number">
           </div>
           <button id="roll" type="button" name="btn">Roll the dice!</button>
-          <button id="keep-rolling" type="button" name="btn">Keep Rolling</button>
+          <!-- <button id="keep-rolling" type="button" name="btn">Keep Rolling</button> -->
           <button id="hold" type="button" name="btn">Hold</button>
           <div class="turn-total">
             <h3>Current turn total:</h3>
