it takes the array of values, sum them up and display them in the over-all-total

--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
           <button id="roll" type="button" name="btn">Roll the dice!</button>
           <!-- <button id="keep-rolling" type="button" name="btn">Keep Rolling</button> -->
           <button id="hold" type="button" name="btn">Hold</button>
-          <div class="turn-total">
-            <h3>Current turn total:</h3>
+          <div class="current">
+            <h3>Current rolls:</h3>
+            <div class="turn-total">
+            </div>
           </div>
-          <div class="over-all-total">
+          <div class="total">
             <h3>Overall total: </h3>
+            <div class="over-all-total">
+          </div>
+
           </div>
         </div>
 
