add button functionality to start a new game after a player wins.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
         </div> -->
       </div>
-
+      <div class="start-over">
+        <button id="restart" type="button" name="btn">New Game</button>  
+      </div>
 
     </div>
   </body>
