--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <body>
     <div class="container">
+      <h1 class="jumbotron">Pig dice</h1>
       <div class="row">
         <div id="player-1" class="col-md-6">
           <h1>Player 1</h1>
@@ -35,12 +36,29 @@
           </div>
         </div>
 
-        <!-- <div id="player-2" class="col-md-6">
+        <div id="player-2" class="col-md-6">
+          <h1>Player 2</h1>
+          <div id="dice-number-2">
+          </div>
+          <button id="roll-2" type="button" name="btn">Roll the dice!</button>
+          <!-- <button id="keep-rolling" type="button" name="btn">Keep Rolling</button> -->
+          <button id="hold-2" type="button" name="btn">Hold</button>
+          <div class="current">
+            <h3>Current rolls:</h3>
+            <div class="turn-total-2">
+            </div>
+          </div>
+          <div class="total-2">
+            <h3>Overall total: </h3>
+            <div class="over-all-total-2"></div>
 
-        </div> -->
+          </div>
+        </div>
       </div>
+
+
       <div class="start-over">
-        <button id="restart" type="button" name="btn">New Game</button>  
+        <button id="restart" type="button" name="btn">New Game</button>
       </div>
 
     </div>
