add dice gif and some styling to css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="jumbotron">Pig dice</h1>
+      <div class="jumbotron">
+        <h1>Pig dice</h1>
+        <img class="image1" src="dice.gif" alt="dice gif" />
+        <img class="image2" src="dice.gif" alt="dice gif" />
+      </div>
       <div class="row">
         <div id="player-1" class="col-md-6">
           <h1>Player 1</h1>
@@ -29,6 +33,9 @@
             <div class="over-all-total"></div>
           </div>
         </div>
+
+
+
         <div id="player-2" class="col-md-6">
           <h1>Player 2</h1>
           <div id="dice-number-2"></div>
