--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
+    <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Crafty+Girls|Neucha" rel="stylesheet">
     <script
     src="https://code.jquery.com/jquery-3.2.1.js"
     integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
@@ -15,8 +16,6 @@
     <div class="container">
       <div class="jumbotron">
         <h1>Pig dice</h1>
-        <img class="image1" src="dice.gif" alt="dice gif" />
-        <img class="image2" src="dice.gif" alt="dice gif" />
       </div>
       <div class="row">
         <div id="player-1" class="col-md-6">
@@ -33,8 +32,6 @@
             <div class="over-all-total"></div>
           </div>
         </div>
-
-
 
         <div id="player-2" class="col-md-6">
           <h1>Player 2</h1>
@@ -53,6 +50,7 @@
       </div>
       <div class="start-over">
         <button id="restart" type="button" name="btn">New Game</button>
+
       </div>
     </div>
   </body>
