--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class="row">
         <div id="player-1" class="col-md-6">
           <h1>Player 1</h1>
+          <img id="pig-2" src="img/pigfriend-2.jpeg" alt="" />
           <div id="dice-number"></div>
           <button id="roll" type="button" name="btn">Roll the dice!</button>
           <button id="hold" type="button" name="btn">Hold</button>
@@ -35,6 +36,7 @@
 
         <div id="player-2" class="col-md-6">
           <h1>Player 2</h1>
+          <img id="pig-1" src="img/pigfriend-1.jpeg" alt="" />
           <div id="dice-number-2"></div>
           <button id="roll-2" type="button" name="btn">Roll the dice!</button>
           <button id="hold-2" type="button" name="btn">Hold</button>
